# NextSearch-api

./: .gitignore  ADMIN_API_SETUP.md  ADMIN_IMPLEMENTATION.md  CACHE_PERSISTENCE.md  CMakeLists.txt  README.md  STATS_API_IMPLEMENTATION.md  api_add_document.cpp  build_inverted_index.cpp  lexicon_builder.cpp
_codeql_build_dir/: Makefile  lexicon
backend/: AddDocument.cpp  CMakeLists.txt  ForwardIndex.cpp  api_server.cpp  barrels.hpp  buildForwardIndex.cpp  cordjson.hpp  increment.cpp  indexio.hpp  lexicon.cpp  segment_writer.hpp  semantic_embedding.cpp  textutil.hpp
backend/api/: api_add_document.cpp  api_add_document.hpp  api_autocomplete.cpp  api_autocomplete.hpp  api_engine.cpp  api_engine.hpp  api_http.cpp  api_http.hpp  api_metadata.cpp  api_metadata.hpp  api_segment.cpp  api_segment.hpp  api_server.cpp  api_types.hpp
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: SearchBar.tsx  SearchResults.tsx
include/: api_admin.hpp  api_ai_overview.hpp  api_ai_summary.hpp  api_engine.hpp  api_feedback.hpp  api_metadata.hpp  api_stats.hpp  api_types.hpp
scripts/: backup_data.cpp
src/: api_ai_overview.cpp  api_ai_summary.cpp  api_engine.cpp  api_feedback.cpp  api_metadata.cpp  api_segment.cpp  api_server.cpp
